# gif-library

./: .gitignore  CHANGELOG.md  KNOWN_LIMITATIONS.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: credential_cleanup.rs  database.rs  export_settings.rs  folders.rs  keybinds.rs  lib.rs  main.rs  maintenance.rs  media.rs  storage.rs  transfer.rs
